--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+		  <a class="navbar-brand" href="#">Krupskaya</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -82,7 +82,6 @@
       </div>
 
       <hr>
-
       <footer>
         <p>&copy; Company 2015</p>
       </footer>
