--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<div class="container">
+		<div id="list" class="container">
 			<div class="media">
 				<div class="media-left">
 					<a href="#">
@@ -73,12 +73,10 @@
 			<hr>
 			<footer>
 			</footer>
-		</div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		</div> <!-- /container -->        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-			<script>window.jQuery.ui || document.write('<script src="js/vendor/jquery-ui.min.js"><\/script>')</script>
-
-				<script src="js/vendor/bootstrap.min.js"></script>
-
-				<script src="js/main.js"></script>
-			</body>
-		</html>
+		<script>window.jQuery.ui || document.write('<script src="js/vendor/jquery-ui.min.js"><\/script>')</script>
+		<script src="js/vendor/bootstrap.min.js"></script>
+		<script src="js/main.js"></script>
+	</body>
+</html>
