--- a/index.html
+++ b/index.html
@@ -50,24 +50,28 @@
 		</div>
 
 		<div id="list" class="container">
-			<div class="media">
-				<div class="media-left">
-					<a href="#">
-						<img class="media-object" src="data/hellmarch.jpg" alt="cover">
-					</a>
-				</div>
-				<div class="media-body">
-					<h4 class="media-heading">Hell March</h4>
+			<div class="col-md-2">
+				<div class="panel panel-default" file="hellmarch">
+					<div class="panel-heading">
+						Hell March
+					</div>
+					<div class="panel-body">
+						<a href="#">
+							<img class="media-object" src="data/hellmarch.jpg" alt="cover">
+						</a>
+					</div>
 				</div>
 			</div>
-			<div class="media">
-				<div class="media-left">
-					<a href="#">
-						test link
-					</a>
-				</div>
-				<div class="media-body">
-					<h4 class="media-heading">The Sign of the Southern Cross</h4>
+			<div class="col-md-2">
+				<div class="panel panel-default" file="02">
+					<div class="panel-heading">
+						The Sign of the Southern Cross
+					</div>
+					<div class="panel-body">
+						<a href="#">
+							test link
+						</a>
+					</div>
 				</div>
 			</div>
 			<hr>
